[gd_scene load_steps=5 format=3 uid="uid://bre7s5jrx85r5"]

[ext_resource type="PackedScene" uid="uid://d0lqr4c2wlo8m" path="res://scenes/pipe/pipe.tscn" id="1_shioj"]
[ext_resource type="Script" path="res://scenes/pipes/pipes.gd" id="1_vsfue"]
[ext_resource type="PackedScene" uid="uid://cfjcrdi11q613" path="res://scenes/laser/laser.tscn" id="2_graln"]
[ext_resource type="AudioStream" uid="uid://c0fnaprpl3l5u" path="res://assets/audio/score.wav" id="3_foklo"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_vsfue")

[node name="Upper" parent="." instance=ExtResource("1_shioj")]
position = Vector2(0, -80)
rotation = 3.14159

[node name="Lower" parent="." instance=ExtResource("1_shioj")]
position = Vector2(0, 80)

[node name="laser" parent="." instance=ExtResource("2_graln")]
z_index = -1

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(99, 0)

[node name="ScoredSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_foklo")

[connection signal="body_entered" from="Upper" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Lower" to="." method="_on_body_entered"]
[connection signal="body_entered" from="laser" to="." method="_on_laser_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
